deploy/10-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: metrics-similar-listings
  namespace: monitoring
  labels:
    app: metrics
    process: similarlistings
    product: monitoring
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: metrics
        process: similarlistings
        product: monitoring
    spec:
      containers:
      - name: metrics
        imagePullPolicy: Always
        image: vivareal/prometheus-json-exporter:latest
        volumeMounts:
        - name: config-metrics
          mountPath: /app/config
        ports:
        - containerPort: 7979
      volumes:
      - name: config-metrics
        configMap:
          name: config-metrics-similar-listings
