deploy/20-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "7979"
    prometheus.io/scrape: "true"
  name: metrics-similar-listings
  namespace: monitoring
  labels:
    app: metrics
    process: similarlistings
    product: monitoring
spec:
  ports:
  - port: 7979
    name: http
    targetPort: 7979
  selector:
    app: metrics
    process: similarlistings
    product: monitoring
  type: ClusterIP
